# MonkeyTypeCLI

./: .env.example  .gitignore  MANIFEST.in  README.md  pyproject.toml
src/: __main__.py
src/monkeytyper_cli/: __init__.py  main.py
src/monkeytyper_cli/api/: __init__.py  client.py  models.py
src/monkeytyper_cli/api/endpoints/: __init__.py
src/monkeytyper_cli/auth/: __init__.py  storage.py
src/monkeytyper_cli/config/: __init__.py  settings.py  user_config.py
src/monkeytyper_cli/core/: __init__.py  engine.py  models.py
src/monkeytyper_cli/data/: id_words.txt
src/monkeytyper_cli/ui/: __init__.py  leaderboard.py  prompts.py  results.py  stats.py
